# uniswap_bot_back

./: .env.example  .gitignore  alembic.ini  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 2c3b8b54594a_initial.py  5688101c26d8_add_prize_field.py  655f1502e8f3_add_competition_status.py  8d36fb495487_on_delete_cascade_competitionswaps.py
app/core/: config.py  ioc.py
app/core/providers/: __init__.py  clients.py  database.py  repositories.py  services.py
app/entity/: exc.py  uniswap.py
app/gateway/: models.py  repository.py
app/gateway/clients/: uniswap_client.py
app/presentation/api/: lifespan.py  main.py
app/presentation/api/uniswap/: __init__.py  exc.py
app/presentation/api/uniswap/competitions/: handlers.py  schemas.py
app/service/: competition_service.py  notifier.py
docker_compose/: app.yaml  storages.yaml
