[tool.poetry]
name = "uniswapbot"
version = "0.1.0"
description = ""
authors = ["devkult <devkultanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.6"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "24.2.0"
babel = "2.16.0"
backoff = "2.2.1"
bitarray = "2.9.2"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
ckzg = "2.0.1"
cytoolz = "0.12.3"
deprecation = "2.1.0"
eth-account = "0.13.3"
eth-hash = "0.7.0"
eth-keyfile = "0.8.1"
eth-keys = "0.5.1"
eth-rlp = "2.1.0"
eth-typing = "5.0.0"
eth-utils = "5.0.0"
eth-abi = "5.1.0"
frozenlist = "1.4.1"
gotrue = "2.8.1"
gql = "3.5.0"
graphql-core = "3.2.4"
h11 = "0.14.0"
h2 = "4.1.0"
hexbytes = "1.2.1"
hpack = "4.0.0"
httpcore = "1.0.5"
httpx = "0.27.2"
hyperframe = "6.0.1"
idna = "3.8"
multidict = "6.0.5"
packaging = "24.1"
parsimonious = "0.10.0"
postgrest = "0.16.11"
pycryptodome = "3.20.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
python-dateutil = "2.9.0.post0"
pyunormalize = "15.1.0"
realtime = "2.0.2"
regex = "2024.7.24"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rlp = "4.0.1"
six = "1.16.0"
sniffio = "1.3.1"
storage3 = "0.7.7"
strenum = "0.4.15"
supabase = "2.7.4"
supafunc = "0.5.1"
toolz = "0.12.1"
types-requests = "2.32.0.20240905"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
web3 = "7.2.0"
websockets = "12.0"
yarl = "1.9.11"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
dishka = "^1.3.0"
aiojobs = "^1.3.0"
redis = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
